openshift-deployment/openshift-dev-export.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T08:43:17Z
    generation: 1
    labels:
      app: cortical-voluba-celery
    name: cortical-voluba-celery
    namespace: cortical-voluba
    resourceVersion: "17821540"
    selfLink: /apis/image.openshift.io/v1/namespaces/cortical-voluba/imagestreams/cortical-voluba-celery
    uid: 337e1efe-d470-11e9-acd7-fa163e8fd6a1
  spec:
    lookupPolicy:
      local: false
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T08:26:22Z
    generation: 1
    labels:
      app: cortical-voluba-flask
    name: cortical-voluba-flask
    namespace: cortical-voluba
    resourceVersion: "19255577"
    selfLink: /apis/image.openshift.io/v1/namespaces/cortical-voluba/imagestreams/cortical-voluba-flask
    uid: d6aa8861-d46d-11e9-acd7-fa163e8fd6a1
  spec:
    lookupPolicy:
      local: false
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T08:43:17Z
    labels:
      app: cortical-voluba-celery
    name: cortical-voluba-celery
    namespace: cortical-voluba
    resourceVersion: "19255108"
    selfLink: /apis/build.openshift.io/v1/namespaces/cortical-voluba/buildconfigs/cortical-voluba-celery
    uid: 337faf7a-d470-11e9-acd7-fa163e8fd6a1
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: cortical-voluba-celery:latest
    postCommit:
      script: |
        set -e
        python3 -m pip install --user /source[tests]
        cd /source
        python3 -m pytest
    resources: {}
    runPolicy: Serial
    source:
      git:
        ref: dev
        uri: https://github.com/HumanBrainProject/cortical-voluba.git
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: Dockerfile.celery
        forcePull: true
      type: Docker
    triggers:
    - generic:
        secret: 2ca81342e8cef25e
      type: Generic
    - github:
        secret: 208f61ccf9242b8a
      type: GitHub
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T08:26:23Z
    labels:
      app: cortical-voluba-flask
    name: cortical-voluba-flask
    namespace: cortical-voluba
    resourceVersion: "19255110"
    selfLink: /apis/build.openshift.io/v1/namespaces/cortical-voluba/buildconfigs/cortical-voluba-flask
    uid: d6bc3dac-d46d-11e9-acd7-fa163e8fd6a1
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: cortical-voluba-flask:latest
    postCommit:
      script: |
        set -e
        python3 -m pip install --user /source[tests]
        cd /source
        python3 -m pytest
    resources: {}
    runPolicy: Serial
    source:
      git:
        ref: dev
        uri: https://github.com/HumanBrainProject/cortical-voluba.git
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: Dockerfile.flask
        forcePull: true
      type: Docker
    triggers:
    - type: ConfigChange
    - generic:
        secret: 292787ee2dbde434
      type: Generic
    - github:
        secret: a9f3c900902a6303
      type: GitHub
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T08:43:17Z
    generation: 19
    labels:
      app: cortical-voluba-celery
    name: cortical-voluba-celery
    namespace: cortical-voluba
    resourceVersion: "17821650"
    selfLink: /apis/apps.openshift.io/v1/namespaces/cortical-voluba/deploymentconfigs/cortical-voluba-celery
    uid: 337e9427-d470-11e9-acd7-fa163e8fd6a1
  spec:
    replicas: 1
    selector:
      deploymentconfig: cortical-voluba-celery
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: cortical-voluba-celery
          deploymentconfig: cortical-voluba-celery
      spec:
        containers:
        - env:
          - name: INSTANCE_PATH
            value: /instance
          - name: REDIS_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: redis
          image: docker-registry.default.svc:5000/cortical-voluba/cortical-voluba-celery@sha256:6014f72cafdd8efaa854dbd573c733d18eb92e0202150425b3536ea9a929b344
          imagePullPolicy: Always
          name: cortical-voluba-celery
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /instance
            name: volume-tua14
          - mountPath: /static-data
            name: static-data
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: instance-dir
          name: volume-tua14
        - name: static-data
          persistentVolumeClaim:
            claimName: static-data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - cortical-voluba-celery
        from:
          kind: ImageStreamTag
          name: cortical-voluba-celery:latest
          namespace: cortical-voluba
        lastTriggeredImage: docker-registry.default.svc:5000/cortical-voluba/cortical-voluba-celery@sha256:6014f72cafdd8efaa854dbd573c733d18eb92e0202150425b3536ea9a929b344
      type: ImageChange
    - type: ConfigChange
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T08:26:23Z
    generation: 24
    labels:
      app: cortical-voluba-flask
    name: cortical-voluba-flask
    namespace: cortical-voluba
    resourceVersion: "19255716"
    selfLink: /apis/apps.openshift.io/v1/namespaces/cortical-voluba/deploymentconfigs/cortical-voluba-flask
    uid: d6b32dc8-d46d-11e9-acd7-fa163e8fd6a1
  spec:
    replicas: 1
    selector:
      deploymentconfig: cortical-voluba-flask
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: cortical-voluba-flask
          deploymentconfig: cortical-voluba-flask
      spec:
        containers:
        - env:
          - name: INSTANCE_PATH
            value: /instance
          - name: REDIS_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: redis
          image: docker-registry.default.svc:5000/cortical-voluba/cortical-voluba-flask@sha256:79ebf04c3376fe2432ef11d75fa2a6f72487f533a2445b794edcaf54e3faf919
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 60
          name: cortical-voluba-flask
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /instance
            name: volume-0dl4t
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: instance-dir
          name: volume-0dl4t
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - cortical-voluba-flask
        from:
          kind: ImageStreamTag
          name: cortical-voluba-flask:latest
          namespace: cortical-voluba
        lastTriggeredImage: docker-registry.default.svc:5000/cortical-voluba/cortical-voluba-flask@sha256:79ebf04c3376fe2432ef11d75fa2a6f72487f533a2445b794edcaf54e3faf919
      type: ImageChange
    - type: ConfigChange
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      template.alpha.openshift.io/wait-for-ready: "true"
    creationTimestamp: 2019-09-11T08:59:05Z
    generation: 2
    labels:
      template: redis-ephemeral-template
      template.openshift.io/template-instance-owner: 6854f2e8-d472-11e9-94ad-fa163e2c730e
    name: redis
    namespace: cortical-voluba
    resourceVersion: "17458638"
    selfLink: /apis/apps.openshift.io/v1/namespaces/cortical-voluba/deploymentconfigs/redis
    uid: 686931c7-d472-11e9-9fef-fa163e42fca5
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: redis
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: redis
      spec:
        containers:
        - env:
          - name: REDIS_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: redis
          image: docker-registry.default.svc:5000/openshift/redis@sha256:ea13fc7d5bd4531f89734a004c7ae2d34dc6a88809df4c8ec12885b7cbf51710
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6379
            timeoutSeconds: 1
          name: redis
          ports:
          - containerPort: 6379
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - test "$(redis-cli -h 127.0.0.1 -a $REDIS_PASSWORD ping)" == "PONG"
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/redis/data
            name: redis-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: redis-data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - redis
        from:
          kind: ImageStreamTag
          name: redis:3.2
          namespace: openshift
        lastTriggeredImage: docker-registry.default.svc:5000/openshift/redis@sha256:ea13fc7d5bd4531f89734a004c7ae2d34dc6a88809df4c8ec12885b7cbf51710
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T08:43:17Z
    labels:
      app: cortical-voluba-celery
    name: cortical-voluba-celery
    namespace: cortical-voluba
    resourceVersion: "17455035"
    selfLink: /api/v1/namespaces/cortical-voluba/services/cortical-voluba-celery
    uid: 338269d6-d470-11e9-acd7-fa163e8fd6a1
  spec:
    clusterIP: 172.30.188.203
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: cortical-voluba-celery
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T08:26:23Z
    labels:
      app: cortical-voluba-flask
    name: cortical-voluba-flask
    namespace: cortical-voluba
    resourceVersion: "17451319"
    selfLink: /api/v1/namespaces/cortical-voluba/services/cortical-voluba-flask
    uid: d6b45b90-d46d-11e9-acd7-fa163e8fd6a1
  spec:
    clusterIP: 172.30.53.10
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: cortical-voluba-flask
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: 2019-09-11T09:25:03Z
    labels:
      gluster.kubernetes.io/provisioned-for-pvc: static-data
    name: glusterfs-dynamic-01aa9cbd-d476-11e9-acd7-fa163e8fd6a1
    namespace: cortical-voluba
    resourceVersion: "17464155"
    selfLink: /api/v1/namespaces/cortical-voluba/services/glusterfs-dynamic-01aa9cbd-d476-11e9-acd7-fa163e8fd6a1
    uid: 09519376-d476-11e9-9fef-fa163e42fca5
  spec:
    clusterIP: 172.30.204.157
    ports:
    - port: 1
      protocol: TCP
      targetPort: 1
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      template.openshift.io/expose-uri: redis://{.spec.clusterIP}:{.spec.ports[?(.name=="redis")].port}
    creationTimestamp: 2019-09-11T08:59:05Z
    labels:
      template: redis-ephemeral-template
      template.openshift.io/template-instance-owner: 6854f2e8-d472-11e9-94ad-fa163e2c730e
    name: redis
    namespace: cortical-voluba
    resourceVersion: "17458518"
    selfLink: /api/v1/namespaces/cortical-voluba/services/redis
    uid: 6865b811-d472-11e9-9fef-fa163e42fca5
  spec:
    clusterIP: 172.30.26.169
    ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
    selector:
      name: redis
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: 2019-09-11T08:51:34Z
    labels:
      app: cortical-voluba-flask
    name: cortical-voluba-https
    namespace: cortical-voluba
    resourceVersion: "17456922"
    selfLink: /apis/route.openshift.io/v1/namespaces/cortical-voluba/routes/cortical-voluba-https
    uid: 5b8af1d0-d471-11e9-acd7-fa163e8fd6a1
  spec:
    host: cortical-voluba.apps-dev.hbp.eu
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: cortical-voluba-flask
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
      volume.beta.kubernetes.io/storage-provisioner: kubernetes.io/glusterfs
    creationTimestamp: 2019-09-11T09:24:51Z
    finalizers:
    - kubernetes.io/pvc-protection
    name: static-data
    namespace: cortical-voluba
    resourceVersion: "17464161"
    selfLink: /api/v1/namespaces/cortical-voluba/persistentvolumeclaims/static-data
    uid: 01aa9cbd-d476-11e9-acd7-fa163e8fd6a1
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    storageClassName: glusterfs-storage
    volumeName: pvc-01aa9cbd-d476-11e9-acd7-fa163e8fd6a1
- apiVersion: v1
  data:
    config.py: |
      import os
      CELERY_BROKER_URL = 'redis://:' + os.environ['REDIS_PASSWORD'] + '@redis:6379/0'
      CELERY_RESULT_BACKEND = CELERY_BROKER_URL
      CORS_ORIGINS = r'https://voluba(-dev)?\.apps(-dev)?\.hbp\.eu'
      PROXY_FIX = {
          'x_for': 1,
          'x_host': 1,
          'x_port': 1,
          'x_proto': 1,
      }
      TEMPLATE_EQUIVOLUMETRIC_DEPTH = '/static-data/BigBrain_equivolumetric_depth.nii.gz'
      ROOT_REDIRECT = 'https://voluba-dev.apps-dev.hbp.eu/'
  kind: ConfigMap
  metadata:
    creationTimestamp: 2019-09-11T09:15:35Z
    name: instance-dir
    namespace: cortical-voluba
    resourceVersion: "19254698"
    selfLink: /api/v1/namespaces/cortical-voluba/configmaps/instance-dir
    uid: b6c01a97-d474-11e9-acd7-fa163e8fd6a1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
